--- a/.gitignore
+++ b/.gitignore
@@ -1,30 +1,6 @@
-# Build results
-[Dd]ebug/
-[Dd]ebugPublic/
-[Rr]elease/
-[Rr]eleases/
-x64/
-x86/
-[Aa][Rr][Mm]/
-[Aa][Rr][Mm]64/
-bld/
-[Bb]in/
-[Oo]bj/
-[Ll]og/
-[Ll]ogs/
-
-# Visual Studio files
-.vs/
-*.suo
+﻿.vs/
+bin/
+obj/
 *.user
-*.userosscache
-*.sln.docstates
-
-# NuGet Packages
-*.nupkg
+*.suo
 packages/
-
-# Sensitive credentials - DO NOT COMMIT
-**/revitsheetsintegration-*.json
-*.json.credentials
-*credentials*.json
