versión funcional, Claude hizo la recuperación de Lookahead, pero parece que falta ajustar el SA

--- a/CopiarParametrosRevit2021/CopiarParametrosRevit2021.csproj
+++ b/CopiarParametrosRevit2021/CopiarParametrosRevit2021.csproj
@@ -93,6 +93,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App.cs" />
+    <Compile Include="Commands\LookaheadManagement\Services\GoogleSheetsService.cs" />
     <!-- Commands: Progress Management -->
     <Compile Include="Commands\ProgressManagement\ValorizacionCommand.cs" />
     <Compile Include="Commands\ProgressManagement\EnCursoCommand.cs" />
